# ismael-internship-bot-client

./: .gitignore  Dockerfile  README.md  pyproject.toml  test.py
.github/workflows/: lint-test-build-deploy.yml
app/: Agent.py  main.py
tests/: test_image.py  utils.py
